--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</prerequisites>
 
 	<properties>
-		<vaadin.version>8.0.6</vaadin.version>
+		<vaadin.version>8.1.0.rc1</vaadin.version>
 		<vaadin.plugin.version>8.0.6</vaadin.plugin.version>
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,6 +25,10 @@
 	</properties>
 
 	<repositories>
+		<repository>
+			<id>vaadin-prerelease</id>
+			<url>https://maven.vaadin.com/vaadin-prereleases</url>
+		</repository>
 		<repository>
 			<id>vaadin-addons</id>
 			<url>http://maven.vaadin.com/vaadin-addons</url>
